Fix skill wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,6 @@ code {
   padding-left: 20px;
 }
 
-
-
 .blurb {
   margin: 0;
   padding: 10px 20px;
@@ -42,7 +40,6 @@ code {
 
 .blurb-details {
   max-width: 50%;
-  max-height: 500px;
   float: left;
 }
 
@@ -82,6 +79,7 @@ code {
 .flex-container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .skills {
@@ -90,6 +88,7 @@ code {
 }
 
 .skill {
+  float: left;
   border-radius: 5px;
   border-width: 1px;
   border-style: groove;
@@ -100,6 +99,11 @@ code {
   background-color: #e0e0e0;
   margin-right: 5px;
   font-size: 15px;
+  margin-bottom: 5px;
+}
+
+.outlink-buffer {
+  height: 10px;
 }
 
 .sticky {
@@ -137,7 +141,6 @@ code {
 .menu-item {
   float: left;
   margin-right: 20px;
-  
 }
 
 .menu-item a {
